--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name:
-Theme URI:
-Author:
-Author URI:
-Description:
+Theme Name: Dana Malkin
+Theme URI: danamalkin.com
+Author: Dana Malkin
+Author URI: danamalkin.com
+Description: Dana Malkin's Portfolio Site
 Version: 0.0.1
-License:
+License: GPL-3.0
 License URI:
 Text Domain:
 */
