--- a/assets/scss/settings/_variables.scss
+++ b/assets/scss/settings/_variables.scss
@@ -1,3 +1,21 @@
 /*----------------------------------------------------------------------------
   Variables
 ----------------------------------------------------------------------------*/
+
+// Colors
+$primary: #BF0F0F;
+$secondary: #8C0708;
+$dark: #262626;
+$white: #fff;
+$black: #000;
+
+// Font Families
+$eaves: 'mr-eaves-modern', sans-serif;
+$style: 'boucherie-block', serif;
+
+// Font Weights
+$light: 200;
+$bold: 700;
+
+// Box Shadow
+$box_shadow: 0 1px 10px 3px rgba(0, 0, 0, .08);
