--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,3 +1,10 @@
 /*------------------------------------------------------------------------------
   Footer
 ------------------------------------------------------------------------------*/
+.copyright {
+  margin: 0;
+  font: $light rem(18)/rem(30) $eaves;
+  color: $white;
+  text-align: right;
+  opacity: 0.5;
+}
