--- a/assets/scss/globals/_global.scss
+++ b/assets/scss/globals/_global.scss
@@ -26,6 +26,7 @@ html a {
 body {
   font: 100%/1.25 arial, helvetica, sans-serif;
   min-height: 100%;
+  background-color: $dark;
 }
 
 // Hide empty paragraphs
@@ -59,4 +60,10 @@ img{
     width: 100%;
     height: 100%;
   }
+}
+
+// Red icon
+.red-icon {
+  position: absolute;
+  max-width: rem(25);
 }
