--- a/assets/scss/settings/_variables.scss
+++ b/assets/scss/settings/_variables.scss
@@ -12,6 +12,7 @@ $black: #000;
 // Font Families
 $eaves: 'mr-eaves-modern', sans-serif;
 $style: 'boucherie-block', serif;
+$fresno: 'fresno', serif;
 
 // Font Weights
 $light: 200;
