--- a/assets/scss/pages/_work.scss
+++ b/assets/scss/pages/_work.scss
@@ -1,3 +1,66 @@
 /*----------------------------------------------------------------------------
   Work
 ----------------------------------------------------------------------------*/
+.work-page {
+  height: calc(100vh - 122px);
+  align-items: center;
+  transform-style: preserve-3d;
+
+  .image-wrap {
+    display:none;
+  }
+
+  .slide {
+    display: flex;
+  }
+
+  .featured-image {
+    min-height: 50vh;
+    width: 100%;
+    z-index: -1;
+  }
+
+  ol {
+    list-style: decimal-leading-zero;
+
+    li {
+      padding: rem(10);
+      opacity: 0.7;
+      z-index: 2;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .active {
+      width: 70vw;
+      opacity: 1;
+      font-size: rem(46);
+      transition: all 0.3s ease;
+    }
+  }
+
+  #icon1 {
+    opacity: 1;
+    bottom: 15vh;
+    left: 10vw;
+  }
+  #icon2 {
+    opacity: 0.5;
+    bottom: 70vh;
+    left: 25vw;
+  }
+  #icon3 {
+    opacity: 0.3;
+    bottom: 80vh;
+    left: 70vw;
+  }
+  #icon4 {
+    max-width: rem(200);
+    opacity: 0.8;
+    bottom: rem(-70);
+    left: rem(-55);
+    z-index: -2;
+  }
+}
