complete basic page builds

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -21,15 +21,16 @@ header {
         color: $white;
 
         &:after {
-          display:block;
           content: '';
-          border-bottom: solid 3px $primary;
-          transform: scaleX(0);
-          transition: transform 250ms ease-in-out;
+          display: block;
+          width: 0;
+          height: 3px;
+          background: $primary;
+          transition: width .3s;
         }
 
         &:hover:after {
-          transform: scaleX(1);
+          width: 100%;
         }
       }
     }
