--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -1,3 +1,36 @@
 /*----------------------------------------------------------------------------
   Contact
 ----------------------------------------------------------------------------*/
+.contact-page {
+  height: calc(100vh - 122px);
+  align-items: center;
+  transform-style: preserve-3d;
+
+  #icon1 {
+    opacity: 1;
+    bottom: 6vh;
+    left: 80vw;
+  }
+  #icon2 {
+    opacity: 0.8;
+    bottom: 14vh;
+    left: 50vw;
+  }
+  #icon3 {
+    opacity: 0.6;
+    bottom: 60vh;
+    left: 70vw;
+  }
+  #icon4 {
+    opacity: 0.3;
+    bottom: 70vh;
+    left: 35vw;
+  }
+  #icon5 {
+    max-width: rem(200);
+    opacity: 1;
+    bottom: rem(-60);
+    left: -35%;
+    z-index: -2;
+  }
+}
