--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -46,6 +46,7 @@
 @import 'pages/work';
 @import 'pages/about';
 @import 'pages/contact';
+@import 'pages/sinlge';
 
 // Plugin Overrides
 @import 'plugins/overrides';
