--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -37,11 +37,34 @@ header {
   }
 
   .current-menu-item {
-    a:after {
-        display:block;
+    a {
+      &:before {
         content: '';
-        border-bottom: solid 3px $primary;
-        transform: scaleX(1) !important;
+        display: block;
+        position: relative;
+        top: rem(33);
+        width: 100%;
+        height: 3px;
+        background: $white;
+        transition: width .3s;
+      }
+
+      &:hover:before {
+        width: 0;
+      }
+
+      &:after {
+        content: '';
+        display: block;
+        width: 0;
+        height: 3px;
+        background: $primary;
+        transition: width .3s;
+      }
+
+      &:hover:after {
+        width: 100%;
+      }
     }
   }
 }
