--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -6,6 +6,37 @@
   align-items: center;
   transform-style: preserve-3d;
 
+  a {
+
+    &:before {
+      content: '';
+      display: block;
+      position: relative;
+      top: rem(28);
+      width: 100%;
+      height: 3px;
+      background: $white;
+      transition: width .3s;
+    }
+
+    &:hover:before {
+      width: 0;
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 3px;
+      background: $primary;
+      transition: width .3s;
+    }
+
+    &:hover:after {
+      width: 100%;
+    }
+  }
+
   #icon1 {
     opacity: 1;
     bottom: 6vh;
