beginning of single page

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -37,6 +37,9 @@ header {
   }
 
   .current-menu-item {
+    position: relative;
+    top: -3px;
+    
     a {
       &:before {
         content: '';
