--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -46,7 +46,7 @@
 @import 'pages/work';
 @import 'pages/about';
 @import 'pages/contact';
-@import 'pages/sinlge';
+@import 'pages/single';
 
 // Plugin Overrides
 @import 'plugins/overrides';
