--- a/assets/scss/pages/_work.scss
+++ b/assets/scss/pages/_work.scss
@@ -34,11 +34,12 @@
 
   .featured-image {
     min-height: 50vh;
-    width: 100%;  
+    width: 100%;
+    z-index: -1;
   }
 
   ol {
-    list-style: decimal-leading-zero;
+    list-style: none;
 
     li {
       padding: rem(10);
@@ -55,6 +56,10 @@
       opacity: 1;
       font-size: rem(46);
       transition: all 0.5s ease;
+
+      &:before {
+        
+      }
     }
   }
 
