--- a/assets/scss/globals/_global.scss
+++ b/assets/scss/globals/_global.scss
@@ -45,6 +45,10 @@ img{
   height: auto;
 }
 
+figure {
+  margin: 0;
+}
+
 // Flex Video Based on Zurb's Foundation Framework
 .flex-video {
   position: relative;
