--- a/assets/scss/pages/_single.scss
+++ b/assets/scss/pages/_single.scss
@@ -123,8 +123,34 @@
     min-height: rem(300);
   }
 
+  .image-wrap {
+
+    &:hover {
+      h3 {
+        opacity: 0;
+      }
+
+      .white-lines {
+        opacity: 0.9;
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  .white-lines {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+    border: 20px solid $white;
+    opacity: 0;
+    transition: all 0.7s ease;
+  }
+
   &__title {
     margin: auto;
+    transition: all 0.5s ease;
   }
 
   #icon10 {
