--- a/assets/scss/pages/_work.scss
+++ b/assets/scss/pages/_work.scss
@@ -6,12 +6,23 @@
   align-items: center;
   transform-style: preserve-3d;
 
+  .text-hover {
+    margin: auto;
+    opacity: 0;
+    transition: all 0.5s ease;
+  }
+
   .image-wrap {
     display:none;
 
     &:hover {
       .white-lines {
         opacity: 0.9;
+        transform: scale(1.1);
+      }
+
+      .text-hover {
+        opacity: 1;
         transform: scale(1.1);
       }
     }
@@ -33,6 +44,7 @@
   }
 
   .featured-image {
+    display: flex;
     min-height: 50vh;
     width: 100%;
     z-index: -1;
