--- a/assets/scss/pages/_single.scss
+++ b/assets/scss/pages/_single.scss
@@ -13,6 +13,17 @@
   &__hero-image {
     min-height: 63vh;
     width: 100%;
+
+    &:before {
+      content: '';
+    	position: absolute;
+    	top: 0;
+    	right: 0.8rem;
+    	bottom: 0;
+    	left: 0.8rem;
+    	background-image: linear-gradient(to top right,$dark,$primary);
+    	opacity: .5;
+    }
   }
 
   &__hero-text {
@@ -20,6 +31,7 @@
 
     p {
       font-size: rem(26);
+      line-height: rem(36);
     }
   }
 
@@ -53,7 +65,7 @@
 
   &__info {
     margin: rem(100) 0;
-    padding: rem(25) 0 0;
+    padding: rem(25) 0 rem(10);
     background-color: rgba(250,250,250,0.02);
   }
 
@@ -78,7 +90,7 @@
 
     &__wrap {
       -webkit-animation-name: move;
-    	-webkit-animation-duration: 8s;
+    	-webkit-animation-duration: 4s;
     	-webkit-animation-iteration-count: 1;
     	-webkit-animation-direction: normal;
     	-webkit-animation-timing-function: linear;
@@ -92,7 +104,7 @@
       		margin-top: 0px;
       	}
       	100% {
-      		margin-top: -800px;
+      		margin-top: -300px;
       	}
       }
     }
@@ -122,6 +134,16 @@
 
   &__features {
 
+    .block-grid-3 {
+      justify-content: center;
+    }
+
+    .feature-col {
+      height: 100%;
+      padding-bottom: rem(30);
+      background-color: rgba(250,250,250,0.02);
+    }
+
     .features-title {
       margin-bottom: rem(40);
       text-transform: uppercase;
@@ -143,13 +165,12 @@
     }
 
     .feature-title {
-      padding: 0 3rem 0 0.8rem;
-      font-size: rem(48);
+      font-size: rem(30);
       margin-bottom: rem(15);
     }
 
     .feature-description {
-      padding: 0 3rem 0 0.8rem;
+      padding: 0 rem(30);
     }
 
     #icon8 {
@@ -160,6 +181,51 @@
   }
 }
 
+// Visit Website
+.visit {
+  padding: rem(150);
+
+  &__url {
+    font-size: rem(30);
+
+    &:before {
+      content: '';
+      display: block;
+      position: relative;
+      top: rem(40);
+      width: 100%;
+      height: 3px;
+      background: $white;
+      transition: width .3s;
+    }
+
+    &:hover:before {
+      width: 0;
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 3px;
+      background: $primary;
+      transition: width .3s;
+    }
+
+    &:hover:after {
+      width: 100%;
+    }
+  }
+}
+
+#icon11 {
+  max-width: rem(150);
+  opacity: 1;
+  bottom: rem(-45);
+  left: -15%;
+  z-index: -2;
+}
+
 // More posts
 
 .more-posts {
@@ -168,6 +234,17 @@
   &__image {
     display: flex;
     min-height: rem(300);
+
+    &:before {
+      content: '';
+    	position: absolute;
+    	top: 0;
+    	right: 0.8rem;
+    	bottom: 0;
+    	left: 0.8rem;
+    	background-image: linear-gradient(to top right,$dark,$primary);
+    	opacity: .6;
+    }
   }
 
   .text-hover {
@@ -212,6 +289,7 @@
     margin: auto;
     padding: 0 rem(20);
     transition: all 0.5s ease;
+    z-index: 2;
   }
 
   #icon10 {
