--- a/assets/scss/pages/_single.scss
+++ b/assets/scss/pages/_single.scss
@@ -18,9 +18,9 @@
       content: '';
     	position: absolute;
     	top: 0;
-    	right: 0.8rem;
+    	right: 0;
     	bottom: 0;
-    	left: 0.8rem;
+    	left: 0;
     	background-image: linear-gradient(to top right,$dark,$primary);
     	opacity: .5;
     }
