--- a/assets/scss/pages/_single.scss
+++ b/assets/scss/pages/_single.scss
@@ -35,6 +35,10 @@
     }
   }
 
+  &__hero-see-more {
+    font-size: rem(28);
+  }
+
   #icon1 {
     opacity: 0.6;
     bottom: 40vh;
@@ -58,9 +62,41 @@
   #icon5 {
     max-width: rem(300);
     opacity: 1;
-    bottom: rem(-100);
+    bottom: rem(-45);
     left: rem(-80);
     z-index: -2;
+  }
+
+  .white-circle {
+    border: 2px solid white;
+    border-radius: 50%;
+    position: relative;
+    width: rem(40);
+    height: rem(40);
+    display: inline-block;
+    top: rem(9);
+    left: rem(10);
+    overflow: hidden;
+
+    &:hover {
+      #chev1 {
+        top: rem(60);
+      }
+      #chev2 {
+        top: rem(-65);
+      }
+    }
+  }
+
+  #chev1 {
+    position: relative;
+    top: rem(-10);
+    transition: top 0.3s ease
+  }
+  #chev2 {
+    position: relative;
+    top: rem(-100);
+    transition: top 0.3s ease
   }
 
   &__info {
@@ -77,6 +113,11 @@
 
   .showcase {
     position: relative;
+    transition: all 0.3s ease;
+  }
+
+  .iphone {
+    margin-top: rem(55);
   }
 
   .screenshot {
@@ -87,27 +128,6 @@
     height: 73.7%;
     z-index: 1;
     overflow: scroll;
-
-    &__wrap {
-      -webkit-animation-name: move;
-    	-webkit-animation-duration: 4s;
-    	-webkit-animation-iteration-count: 1;
-    	-webkit-animation-direction: normal;
-    	-webkit-animation-timing-function: linear;
-
-      &:hover {
-        -webkit-animation-play-state: paused;
-      }
-
-      @-webkit-keyframes move {
-      	0% {
-      		margin-top: 0px;
-      	}
-      	100% {
-      		margin-top: -300px;
-      	}
-      }
-    }
   }
 
   #icon6 {
@@ -127,6 +147,9 @@
     left: 16.5%;
     width: 67%;
     height: 75%;
+  }
+
+  .slick-list {
     overflow: hidden;
   }
 
