complete desktop animations

--- a/assets/scss/settings/_slick-theme.scss
+++ b/assets/scss/settings/_slick-theme.scss
@@ -12,7 +12,7 @@ $slick-font-family: "FontAwesome" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: white !default;
-$slick-dot-color-active: $slick-dot-color !default;
+$slick-dot-color-active: $primary !default;
 $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
 $slick-dot-character: "\f068" !default;
