--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -83,3 +83,41 @@ header {
     }
   }
 }
+.nifty-panel {
+  .mobile-nav {
+    width: 100%;
+
+    ul {
+      width: 100%;
+      list-style: none;
+      margin-top: rem(20);
+      padding-right: rem(30);
+      text-align: right;
+
+      li {
+        font-size: rem(30);
+        padding: rem(15) 0;
+      }
+    }
+  }
+
+  #icon1 {
+    max-width: rem(100);
+    top: rem(60);
+    left: 10%;
+    opacity: 0.7;
+  }
+  #icon2 {
+    max-width: rem(35);
+    top: rem(160);
+    left: 40%;
+    opacity: 0.4;
+  }
+}
+
+// Media Queries
+@media screen and (max-width:$small-breakpoint) {
+  header {
+    padding-bottom: rem(15);
+  }
+}
