--- a/assets/scss/globals/_global.scss
+++ b/assets/scss/globals/_global.scss
@@ -70,5 +70,10 @@ figure {
 .red-icon {
   position: absolute;
   max-width: rem(35);
-  z-index: -1;
+  z-index: -9999;
+}
+
+// margin
+.margin-bottom {
+  margin-bottom: rem(20);
 }
