--- a/assets/scss/pages/_single.scss
+++ b/assets/scss/pages/_single.scss
@@ -135,6 +135,11 @@
     top: rem(-50);
     left: 25vw;
   }
+  #icon13 {
+    opacity: 0.8;
+    top: rem(-100);
+    left: 75vw;
+  }
   #icon7 {
     opacity: 0.4;
     bottom: rem(-50);
@@ -206,7 +211,7 @@
 
 // Visit Website
 .visit {
-  padding: rem(150);
+  margin: rem(150) 0;
 
   &__url {
     font-size: rem(30);
@@ -245,7 +250,7 @@
   max-width: rem(150);
   opacity: 1;
   bottom: rem(-45);
-  left: -15%;
+  left: 0;
   z-index: -2;
 }
 
@@ -319,5 +324,43 @@
     opacity: 0.3;
     bottom: rem(-100);
     left: 35vw;
+  }
+  #icon12 {
+    opacity: 0.5;
+    top: rem(-100);
+    left: 65vw;
+  }
+}
+
+// Media Queries
+@media screen and (max-width:$small-breakpoint) {
+  .single-page {
+    &__hero-text {
+      padding-left: rem(30);
+
+      h1 {
+        font-size: rem(45);
+        line-height: rem(50);
+      }
+
+      p {
+        font-size: rem(20);
+        line-height: rem(26);
+      }
+    }
+
+    .features-title {
+      font-size: rem(40);
+    }
+
+    .visit {
+      margin: rem(100) 0;
+    }
+
+    #icon10 {
+      opacity: 0.3;
+      bottom: rem(-50);
+      left: 35vw;
+    }
   }
 }
