combined js files, chaged screenshot, and tweaked about page image

--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -6,6 +6,20 @@
   align-items: center;
   transform-style: preserve-3d;
 
+  &__img {
+    
+    &:before {
+      content: '';
+    	position: absolute;
+    	top: 0;
+    	right: 0;
+    	bottom: 0;
+    	left: 0;
+    	background-image: linear-gradient(to top right,$dark,$primary);
+    	opacity: .5;
+    }
+  }
+
   #icon1 {
     opacity: 1;
     bottom: 6vh;
