fixed about page image css

--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -7,7 +7,7 @@
   transform-style: preserve-3d;
 
   &__img {
-    
+
     &:before {
       content: '';
     	position: absolute;
@@ -17,6 +17,10 @@
     	left: 0;
     	background-image: linear-gradient(to top right,$dark,$primary);
     	opacity: .5;
+    }
+
+    img {
+      display: flex;
     }
   }
 
