sitewide qa fixes

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,6 +1,18 @@
 /*------------------------------------------------------------------------------
   Footer
 ------------------------------------------------------------------------------*/
+footer {
+  .menu-social {
+    a {
+      transition: all 0.3s ease;
+
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+  }
+}
+
 .copyright {
   margin: 0;
   font: $light rem(18)/rem(30) $eaves;
