--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,10 +1,13 @@
 /*----------------------------------------------------------------------------
   Home
 ----------------------------------------------------------------------------*/
+.home-page-contianer {
+  overflow: hidden;
+}
+
 .home-page {
   height: calc(100vh - 122px);
   align-items: center;
-  overflow: hidden;
 
   #icon1 {
     opacity: 1;
