--- a/assets/scss/pages/_work.scss
+++ b/assets/scss/pages/_work.scss
@@ -9,6 +9,9 @@
   .work-image-container {
     z-index: -1;
   }
+  .work-titles-container {
+    z-index: 1;
+  }
 
   .text-hover {
     margin: auto;
